# aoc-community-patch

./: CMakeLists.txt  azure-pipelines.yml  readme.md
.github/workflows/: ccpp.yml
docs/: file-formats.md  modding-features.md  readme.md
src/: auto_hook.cpp  auto_hook.h  config.cpp  config.h  hook.c  hook.h  main.cpp
src/features/: attribute_storage_mode.cpp  attribute_storage_mode.h  auto_tech.cpp  auto_tech.h  brb.cpp  brb.h  hill_bonus.cpp  hill_bonus.h  mercenaries.cpp  mercenaries.h  num_idles.cpp  num_idles.h  num_resource_gatherers.cpp  num_resource_gatherers.h  queueable_tech.cpp  queueable_tech.h  scx_mod_identifier.cpp  scx_mod_identifier.h  unicode.cpp  unicode.h
src/fixes/: keystate.cpp  keystate.h  scenedit_minimap_position.cpp  scenedit_minimap_position.h  scenedit_pierce_armor.cpp  scenedit_pierce_armor.h
src/game/: attributes.h  draw_area.cpp  draw_area.h  draw_system.h  game.h  panel.cpp  panel.h  player.cpp  player.h  shape.h  unit.h  userpatch.h
